style.css
@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');

* {
    margin: 0px;
    padding: 0px;
}

button:hover {
    cursor: pointer;
    
}


html {
    margin: 0px;
}

.hero-desktop {
    display: none;
}

.hero-mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* background: red; */
    width: 100%;
    height: 100vh;
    background-image: url();
}





/* header mobile */


.header-mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: linear-gradient(180deg,#0A135D,#1528C3);
    width: 100%;
    color: whitesmoke;
    padding-inline: 25px ;
    gap: 25px;
    box-sizing: border-box;
    padding-block: 25px;
    height: 200px;
    /* padding-bottom: px; */
    /* padding-bottom: 25px ; */
}


.header-mobile >  .ul-top {
    display: flex;
    flex-direction: column-reverse;
    gap: 25px;
    align-items: center;
    width: 100%;
    max-width: 450px;  
    
    /* background: rgb(219, 138, 44); */
    box-sizing: border-box;
   
}




.header-mobile > .ul-top > span {
   padding-inline: 25px ;
    font-family: "Roboto" ,serif;
    gap: 5px;
    /* background: #23bb5d; */
    width: 90%;
    max-width: 600px;
    font-size: larger;
    font-weight: 300;
    box-sizing: border-box;
    
}

.header-mobile > .ul-top > span > svg {
    width: 25px;
}


.header-mobile > .ul-top > span:nth-child(2) {
    display: flex;
    justify-content: start;
    align-items: center ;
    border-left: solid white 1px;
}

.header-mobile > .ul-top > span:nth-child(1) {
    display: flex;
    justify-content: end;
    align-items: center ;
    border-right: white 1px solid;
}


.header-mobile > h1 {
    font-family: "Fugaz one" , serif;
    font-weight: normal;
    letter-spacing: 10px;
    font-size: clamp(1.5rem,3vw,2.2rem);
    background: linear-gradient(0deg,#FFFFFF,#999999);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: fit-content;
    box-sizing: border-box;
    padding-inline: 20px;
    /* background: rebeccapurple; */
}


/* fin header mobile */






.center-hero-mobile {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-bottom: 25vh;
    height: calc(100vh - 200px);
    flex-direction: column;
    gap: 0px;
    background-image: url("/image/welcomephoto-mobile.jpg");
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    color: whitesmoke;
    font-weight: 300;
}

.center-hero-mobile > li {
    display: flex;align-items: center;
    justify-content: center;
    text-align: center;
    list-style: none;    
    font-size: 1.5rem;
    width: 70vw;
    font-family: "Roboto" ,serif;
}


.center-hero-mobile > p {
    display: flex;
    justify-content: center;
    align-items: center;
    /* background: rgb(100, 100, 206); */
    padding-bottom: 5px;
    font-size: 1.2rem;
    font-family: "Roboto",serif;
    width: 80vw;
    text-align: center;
}

.center-hero-mobile > p {
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: 90%;
}

.center-hero-mobile > p > span {   
    border-bottom: white solid 1px;
    width: 75vw;
    max-width: 500px;

}

.cta-mobile-hero {
    position: fixed;
    bottom: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
    width: 90vw;
    max-width: 350px;
    height: 50px;
    margin-bottom: 25px;
    box-sizing: border-box;
    z-index: 50;
    background: #D03434;
    border: none;
    color: whitesmoke;
    font-size: 1.25rem;
}

.icon-phone {
    width: 30px;
    height: 25px;
}



/* section avantage */
.avantage {
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* background: rgb(167, 218, 27); */
    /* align-items: center; */
    background: hsl(100, 43%, 99%);
    gap: 25px;
    padding: 50px;
}

.avantage > h1 {
    font-family: "Crimson text",serif;
    background: linear-gradient(90deg,#00108985,#15172680);
    font-weight: 100;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    text-align: center;


}

.avantage > ul > li >img {
    width: 60px ;
}

.avantage > ul >li {
    display: flex;
    align-items: center;
    justify-content: center;
    /* background: maroon; */
    gap: 20px;
    list-style: none;
    flex-direction: column;
    font-family: "Roboto" ,serif;
     background: rgb(255, 255, 255);
     width: 100%;
     max-width: 350px;
     padding-block: 50px;
     padding-inline: 25px;
     box-sizing: border-box;
     box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.10);
}

.avantage > ul > li > span {
    text-align: center;
    font-size: clamp(1rem,1.5vw,1.5rem);
   
}



.avantage > ul > li:first-child > span  {
    background: linear-gradient(#7E0EAB,#330645) ;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}
.avantage > ul > li:nth-child(2) > span  {
    background: linear-gradient(#B28D5F,#89664C) ;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}
.avantage > ul > li:nth-child(3) > span  {
    background: linear-gradient(90deg,#0F0C93,#076da0) ;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}


.avantage > ul >li:nth-child(3) > img {
    width: 45px ;
}
/* ... */

